--- a/core/parallax.module.css
+++ b/core/parallax.module.css
@@ -6,7 +6,7 @@
 }
 
 .hero {
-  margin-top: 60px;
+  margin-top: 80px;
 }
 
 @media (min-width: 632px) {
